<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backrand_a"
    tools:context="com.best.Quiz_App.addPoint">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/giphy" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <Button
                android:id="@+id/rateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:onClick="rate"
                android:background="@android:color/holo_green_dark"
                android:text="@string/rate_app"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/you"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="adds"
                android:text="@string/watch_add"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/fac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="fac"
                android:text="@string/share_fac"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="apps"
                android:text="@string/download_apps"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="share"
                android:text="@string/share_app"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tweet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="tweet"
                android:text="@string/share_twitter"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/whatsup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="whats"
                android:text="@string/share_whatsapp"
                android:textAlignment="center"
                android:textColor="@color/amber_50"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/amber_500"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Button" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</RelativeLayout>
